exports[`black`] = `
<div
  style={
    Object {
      "background": "url(\'img/ban_dark.png\')",
      "height": 48,
      "paddingLeft": 10,
      "paddingRight": 10,
      "width": 390,
    }
  }>
  <div
    style={
      Object {
        "float": "left",
        "height": 48,
        "position": "relative",
        "width": 43,
      }
    }>
    <span
      style={
        Object {
          "backgroundImage": "url(img/koma/Shi.png)",
          "backgroundSize": "100%",
          "display": "block",
          "height": 48,
          "width": 43,
        }
      } />
  </div>
  <div
    style={
      Object {
        "float": "left",
        "height": 48,
        "position": "relative",
        "width": 43,
      }
    }>
    <span
      style={
        Object {
          "backgroundImage": "url(img/koma/Skaku.png)",
          "backgroundSize": "100%",
          "display": "block",
          "height": 48,
          "width": 43,
        }
      } />
    <span
      style={
        Object {
          "color": "white",
          "fontSize": 20,
          "position": "absolute",
          "right": 2.6875,
          "textShadow": ".5px .5px black, .5px -.5px black, -.5px .5px black, -.5px -.5px black",
          "top": 0,
        }
      }>
      2
    </span>
  </div>
  <div
    style={
      Object {
        "float": "left",
        "height": 48,
        "position": "relative",
        "width": 43,
      }
    }>
    <span
      style={
        Object {
          "backgroundImage": "url(img/koma/Skin.png)",
          "backgroundSize": "100%",
          "display": "block",
          "height": 48,
          "width": 43,
        }
      } />
    <span
      style={
        Object {
          "color": "white",
          "fontSize": 20,
          "position": "absolute",
          "right": 2.6875,
          "textShadow": ".5px .5px black, .5px -.5px black, -.5px .5px black, -.5px -.5px black",
          "top": 0,
        }
      }>
      3
    </span>
  </div>
</div>
`;

exports[`black small`] = `
<div
  style={
    Object {
      "background": "url(\'img/ban_dark.png\')",
      "height": 33.599999999999994,
      "paddingLeft": 7,
      "paddingRight": 7,
      "width": 273,
    }
  }>
  <div
    style={
      Object {
        "float": "left",
        "height": 33.599999999999994,
        "position": "relative",
        "width": 30.099999999999998,
      }
    }>
    <span
      style={
        Object {
          "backgroundImage": "url(img/koma/Shi.png)",
          "backgroundSize": "100%",
          "display": "block",
          "height": 33.599999999999994,
          "width": 30.099999999999998,
        }
      } />
  </div>
  <div
    style={
      Object {
        "float": "left",
        "height": 33.599999999999994,
        "position": "relative",
        "width": 30.099999999999998,
      }
    }>
    <span
      style={
        Object {
          "backgroundImage": "url(img/koma/Skaku.png)",
          "backgroundSize": "100%",
          "display": "block",
          "height": 33.599999999999994,
          "width": 30.099999999999998,
        }
      } />
    <span
      style={
        Object {
          "color": "white",
          "fontSize": 13.999999999999998,
          "position": "absolute",
          "right": 1.8812499999999999,
          "textShadow": ".5px .5px black, .5px -.5px black, -.5px .5px black, -.5px -.5px black",
          "top": 0,
        }
      }>
      2
    </span>
  </div>
  <div
    style={
      Object {
        "float": "left",
        "height": 33.599999999999994,
        "position": "relative",
        "width": 30.099999999999998,
      }
    }>
    <span
      style={
        Object {
          "backgroundImage": "url(img/koma/Skin.png)",
          "backgroundSize": "100%",
          "display": "block",
          "height": 33.599999999999994,
          "width": 30.099999999999998,
        }
      } />
    <span
      style={
        Object {
          "color": "white",
          "fontSize": 13.999999999999998,
          "position": "absolute",
          "right": 1.8812499999999999,
          "textShadow": ".5px .5px black, .5px -.5px black, -.5px .5px black, -.5px -.5px black",
          "top": 0,
        }
      }>
      3
    </span>
  </div>
</div>
`;

exports[`white`] = `
<div
  style={
    Object {
      "background": "url(\'img/ban_dark.png\')",
      "height": 48,
      "paddingLeft": 10,
      "paddingRight": 10,
      "width": 390,
    }
  }>
  <div
    style={
      Object {
        "float": "right",
        "height": 48,
        "position": "relative",
        "width": 43,
      }
    }>
    <span
      style={
        Object {
          "backgroundImage": "url(img/koma/Gkin.png)",
          "backgroundSize": "100%",
          "display": "block",
          "height": 48,
          "width": 43,
        }
      } />
    <span
      style={
        Object {
          "color": "white",
          "fontSize": 20,
          "position": "absolute",
          "right": 2.6875,
          "textShadow": ".5px .5px black, .5px -.5px black, -.5px .5px black, -.5px -.5px black",
          "top": 0,
        }
      }>
      3
    </span>
  </div>
  <div
    style={
      Object {
        "float": "right",
        "height": 48,
        "position": "relative",
        "width": 43,
      }
    }>
    <span
      style={
        Object {
          "backgroundImage": "url(img/koma/Gkaku.png)",
          "backgroundSize": "100%",
          "display": "block",
          "height": 48,
          "width": 43,
        }
      } />
    <span
      style={
        Object {
          "color": "white",
          "fontSize": 20,
          "position": "absolute",
          "right": 2.6875,
          "textShadow": ".5px .5px black, .5px -.5px black, -.5px .5px black, -.5px -.5px black",
          "top": 0,
        }
      }>
      2
    </span>
  </div>
  <div
    style={
      Object {
        "float": "right",
        "height": 48,
        "position": "relative",
        "width": 43,
      }
    }>
    <span
      style={
        Object {
          "backgroundImage": "url(img/koma/Ghi.png)",
          "backgroundSize": "100%",
          "display": "block",
          "height": 48,
          "width": 43,
        }
      } />
  </div>
</div>
`;

exports[`white small`] = `
<div
  style={
    Object {
      "background": "url(\'img/ban_dark.png\')",
      "height": 33.599999999999994,
      "paddingLeft": 7,
      "paddingRight": 7,
      "width": 273,
    }
  }>
  <div
    style={
      Object {
        "float": "right",
        "height": 33.599999999999994,
        "position": "relative",
        "width": 30.099999999999998,
      }
    }>
    <span
      style={
        Object {
          "backgroundImage": "url(img/koma/Gkin.png)",
          "backgroundSize": "100%",
          "display": "block",
          "height": 33.599999999999994,
          "width": 30.099999999999998,
        }
      } />
    <span
      style={
        Object {
          "color": "white",
          "fontSize": 13.999999999999998,
          "position": "absolute",
          "right": 1.8812499999999999,
          "textShadow": ".5px .5px black, .5px -.5px black, -.5px .5px black, -.5px -.5px black",
          "top": 0,
        }
      }>
      3
    </span>
  </div>
  <div
    style={
      Object {
        "float": "right",
        "height": 33.599999999999994,
        "position": "relative",
        "width": 30.099999999999998,
      }
    }>
    <span
      style={
        Object {
          "backgroundImage": "url(img/koma/Gkaku.png)",
          "backgroundSize": "100%",
          "display": "block",
          "height": 33.599999999999994,
          "width": 30.099999999999998,
        }
      } />
    <span
      style={
        Object {
          "color": "white",
          "fontSize": 13.999999999999998,
          "position": "absolute",
          "right": 1.8812499999999999,
          "textShadow": ".5px .5px black, .5px -.5px black, -.5px .5px black, -.5px -.5px black",
          "top": 0,
        }
      }>
      2
    </span>
  </div>
  <div
    style={
      Object {
        "float": "right",
        "height": 33.599999999999994,
        "position": "relative",
        "width": 30.099999999999998,
      }
    }>
    <span
      style={
        Object {
          "backgroundImage": "url(img/koma/Ghi.png)",
          "backgroundSize": "100%",
          "display": "block",
          "height": 33.599999999999994,
          "width": 30.099999999999998,
        }
      } />
  </div>
</div>
`;
